--- a/cas.css
+++ b/cas.css
@@ -37,6 +37,8 @@ nav{
     width: 70px;
     height: 60px;
     border-radius: 10px;
+    margin-top:100px;
+
         top: 50%; 
     right: 50%;
     transform: translate(50%,-50%);
