--- a/cas.css
+++ b/cas.css
@@ -411,6 +411,8 @@ nav .fa-solid{
     .header-text h1{
         font-size: 30px;
     }
+.logo{
+display: inline-block;}
     nav .fas{
         display: block;
         font-size: 25px;
