--- a/portfolio/cas.css
+++ b/portfolio/cas.css
@@ -123,7 +123,7 @@ nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
-   
+   background: springgreen;
 }
 nav ul li a{
     color: #fff;
